[project]
name = "reaction-prediction-with-transfromer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "rdkit>=2025.9.5",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "tqdm>=4.67.3",
]
