[project]
name = "reaction-prediction-with-transfromer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pytorch-lightning>=2.6.1",
    "rdkit>=2025.9.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch==2.3.1",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
